@@ -76,18 +76,15 @@ namespace libtorrent
 		else if (ps.type == proxy_settings::none
 			|| (peer_connection && !ps.proxy_peer_connections))
 		{
-			stream_socket* str;
 #ifdef TORRENT_USE_OPENSSL
 			if (ssl_context)
 			{
 				s.instantiate<ssl_stream<stream_socket> >(ios, ssl_context);
-				str = &s.get<ssl_stream<stream_socket> >()->next_layer();
 			}
 			else
 #endif
 			{
 				s.instantiate<stream_socket>(ios);
-				str = s.get<stream_socket>();
 			}
 		}
 		else if (ps.type == proxy_settings::http
