@@ -2420,8 +2420,8 @@ namespace libtorrent
 
 	bool piece_picker::is_requested(piece_block block) const
 	{
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 
 		int state = m_piece_map[block.piece_index].state;
@@ -2435,8 +2435,8 @@ namespace libtorrent
 
 	bool piece_picker::is_downloaded(piece_block block) const
 	{
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 
 		if (m_piece_map[block.piece_index].index == piece_pos::we_have_index) return true;
@@ -2451,8 +2451,8 @@ namespace libtorrent
 
 	bool piece_picker::is_finished(piece_block block) const
 	{
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 
 		if (m_piece_map[block.piece_index].index == piece_pos::we_have_index) return true;
@@ -2473,8 +2473,8 @@ namespace libtorrent
 
 		TORRENT_ASSERT(peer == 0 || static_cast<policy::peer*>(peer)->in_use);
 		TORRENT_ASSERT(state != piece_picker::none);
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 		TORRENT_ASSERT(int(block.block_index) < blocks_in_piece(block.piece_index));
 		TORRENT_ASSERT(!m_piece_map[block.piece_index].have());
@@ -2537,8 +2537,8 @@ namespace libtorrent
 
 	int piece_picker::num_peers(piece_block block) const
 	{
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 		TORRENT_ASSERT(int(block.block_index) < blocks_in_piece(block.piece_index));
 
@@ -2583,8 +2583,8 @@ namespace libtorrent
 
 		TORRENT_ASSERT(peer == 0 || static_cast<policy::peer*>(peer)->in_use);
 
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 		TORRENT_ASSERT(int(block.block_index) < blocks_in_piece(block.piece_index));
 		// this is not valid for web peers
@@ -2899,7 +2899,7 @@ namespace libtorrent
 
 		std::vector<downloading_piece>::const_iterator i = find_dl_piece(state - 1, block.piece_index);
 
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
 		TORRENT_ASSERT(i->info[block.block_index].piece_index == block.piece_index);
 		if (i->info[block.block_index].state == block_info::state_none)
 			return 0;
@@ -2922,8 +2922,8 @@ namespace libtorrent
 #endif
 		TORRENT_ASSERT(peer == 0 || static_cast<policy::peer*>(peer)->in_use);
 
-		TORRENT_ASSERT(block.piece_index >= 0);
-		TORRENT_ASSERT(block.block_index >= 0);
+		TORRENT_ASSERT(block.block_index != piece_block::invalid.block_index);
+		TORRENT_ASSERT(block.piece_index != piece_block::invalid.piece_index);
 		TORRENT_ASSERT(block.piece_index < m_piece_map.size());
 		TORRENT_ASSERT(int(block.block_index) < blocks_in_piece(block.piece_index));
 
